<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pischik.nikita.rentalmanager.AddAddresses"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        card_view:cardBackgroundColor="#FFF">


        <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/card_view"
        android:layout_alignLeft="@+id/card_view"
        android:layout_alignStart="@+id/card_view"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="25dp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/title_add_new_address"
                  android:layout_marginLeft="20dp"
                  android:layout_marginTop="10dp"
                  android:id="@+id/title"
                  android:textSize="25sp"/>

              <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:layout_marginTop="10dp"
                  android:background="@android:color/darker_gray"
                  android:layout_below="@+id/title"
                  android:id="@+id/separator"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/street_edit_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_below="@+id/separator">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/street_edit_field"
                    android:textSize="@dimen/list_addresses_text_size"
                    android:layout_marginTop="5dp"
                    android:inputType="textAutoComplete"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:hint="@string/street_hint"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_edit_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_below="@+id/street_edit_hint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/city_edit_field"
                    android:textSize="@dimen/list_addresses_text_size"
                    android:layout_marginTop="5dp"
                    android:inputType="textAutoComplete"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:hint="@string/city_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/state_edit_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_below="@+id/city_edit_hint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/state_edit_field"
                    android:textSize="@dimen/list_addresses_text_size"
                    android:layout_marginTop="5dp"
                    android:inputType="textAutoComplete"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:hint="@string/state_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/monthly_rent_edit_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_below="@+id/state_edit_hint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/monthly_rent_edit_field"
                    android:textSize="@dimen/list_addresses_text_size"
                    android:layout_marginTop="5dp"
                    android:inputType="numberDecimal"
                    android:maxLength="15"
                    android:hint="@string/rent_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/landlord_edit_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:hintTextAppearance="@style/TextLabel"
                android:layout_below="@+id/monthly_rent_edit_hint">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/landlord_edit_field"
                    android:textSize="@dimen/list_addresses_text_size"
                    android:layout_marginTop="5dp"
                    android:inputType="textAutoComplete"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:hint="@string/landlord_hint"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_in_hint"
                android:id="@+id/date_in_field"
                android:layout_below="@+id/landlord_edit_hint"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/list_addresses_text_size"
                android:layout_marginLeft="20dp"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator_between_date"
                android:id="@+id/separator_between_date"
                android:layout_alignBottom="@+id/date_in_field"
                android:layout_toRightOf="@+id/date_in_field"
                android:layout_toEndOf="@+id/date_in_field"
                android:textSize="@dimen/list_addresses_hint_text_size"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_out_hint"
                android:id="@+id/date_out_field"
                android:layout_alignBottom="@+id/separator_between_date"
                android:layout_toRightOf="@+id/separator_between_date"
                android:layout_toEndOf="@+id/separator_between_date"
                android:textSize="@dimen/list_addresses_text_size"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>




</LinearLayout>
