<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    card_view:cardBackgroundColor="#FFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:id="@+id/address_field"
            android:textSize="@dimen/list_addresses_text_size"
            android:layout_below="@+id/address_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/rent_field"
            android:textSize="@dimen/list_addresses_text_size"
            android:layout_below="@+id/rent_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/landlord_field"
            android:textSize="@dimen/list_addresses_text_size"
            android:layout_below="@+id/landlord_hint"
            android:layout_alignLeft="@+id/landlord_hint"
            android:layout_alignStart="@+id/landlord_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/date_field"
            android:textSize="@dimen/list_addresses_text_size"
            android:layout_below="@+id/date_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_hint"
            android:id="@+id/address_hint"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/list_addresses_hint_text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_hint"
            android:id="@+id/rent_hint"
            android:layout_below="@+id/address_field"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/list_addresses_hint_text_size"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landlord_hint"
            android:id="@+id/landlord_hint"
            android:layout_above="@+id/rent_field"
            android:layout_toRightOf="@+id/rent_hint"
            android:layout_toEndOf="@+id/rent_hint"
            android:layout_marginLeft="53dp"
            android:layout_marginStart="53dp"
            android:textSize="@dimen/list_addresses_hint_text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_hint"
            android:id="@+id/date_hint"
            android:layout_below="@+id/rent_field"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/list_addresses_hint_text_size"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>